@@ -1,5 +1,10 @@
 2006-05-14  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: add support for XSPF version 1 playlists
+	(see http://www.xspf.org/specs/)
+
+2006-05-14  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: patch from Stanislav Brabec <sbrabec@suse.cz>
 	to clarify C, C++, C# and ObjC headers and sources (Closes: #6743)
 
